# app-framework-flask

./: .gitignore  README.md  docker-compose.yml  env.example
db-setup/: init-db.sh
db-setup/migrations/: initialize.sql
flaskBackend/: alembic.ini  dockerfile  migrate-new.sh  migrate-up-db.sh  pyproject.toml
flaskBackend/alembic/: README  env.py
flaskBackend/alembic/versions/: c7b9407e0a42_create_example_table.py  c9899636425d_create_example_table.py
flaskBackend/src/: app.py  config.py  import_test.py  testing_connection.py
flaskBackend/src/controllers/: example_controller.py
flaskBackend/src/models/: example_table.py  model_factory.py
flaskBackend/src/services/: example_service.py  service_factory.py
flaskBackend/test/acceptance/: test_example.py  test_hello_world.py
flaskBackend/test/factories/: example_factory.py
ui/server/: server.js
