[tool.poetry]
name = "dndApp"
version = "0.1.0"
description = ""
authors = ["Nathan Kester"]


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
Flask-SQLAlchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
SQLAlchemy = "^2.0.40"
factory-boy = "^3.3.3"

[tool.poetry.group.dev.dependencies]
Flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
